--- a/pages/university/style.module.css
+++ b/pages/university/style.module.css
@@ -80,6 +80,17 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 30px;
+    justify-content: space-between;
+}
+.flex{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-top: 15px;
+}
+.link{
+    color: black;
+    font-family: "Rubik Regular";
 }
 @media screen and (max-width: 761px) {
     .titleBlock{
