--- a/src/components/TopUniversitiesBlock/style.module.css
+++ b/src/components/TopUniversitiesBlock/style.module.css
@@ -23,6 +23,7 @@
     display: flex;
     flex-wrap: wrap;
     margin-top: 30px;
+    justify-content: space-between;
 }
 .loading{
     width: 100%;
