--- a/src/components/IntroBlock/style.module.css
+++ b/src/components/IntroBlock/style.module.css
@@ -13,9 +13,10 @@
 .container{
     width: 100%;
     padding: 0 5%;
+    padding-top: 5%;
     box-sizing: border-box;
     display: flex;
-    height: 90vh;
+    height: 75vh;
 }
 .leftSide{
     width: 50%;
