--- a/src/components/WhatDoYouNeed/style.module.css
+++ b/src/components/WhatDoYouNeed/style.module.css
@@ -11,6 +11,7 @@
     src: url("../../../public/fonts/Rubik/Rubik-Bold.ttf") format("truetype");
 }
 .container{
+    margin-top: 100px;
     width: 100%;
     padding: 0 5%;
     box-sizing: border-box;
